Fix carousel arrows color in dark mode

--- a/src/main/webapp/css/jenkins-style.css
+++ b/src/main/webapp/css/jenkins-style.css
@@ -90,6 +90,7 @@ pre {
 .carousel-control-prev, .carousel-control-next {
     width: 15px;
     fill: var(--text-color);
+    filter: none;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------- */
